--- a/svelte/package.json
+++ b/svelte/package.json
@@ -12,13 +12,15 @@
     "format": "prettier --write \"**/*.{js,ts,svelte,scss,html,md,json}\" --ignore-path .gitignore"
   },
   "devDependencies": {
+    "@popperjs/core": "^2.11.5",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
     "@tsconfig/svelte": "^2.0.1",
     "bootstrap": "^5.1.3",
     "eslint": "^8.16.0",
     "eslint-plugin-svelte3": "^4.0.0",
+    "prettier": "^2.6.2",
     "prettier-plugin-svelte": "^2.7.0",
-    "rawg-api-sdk": "^0.0.2",
+    "rawg-api-sdk": "^0.0.3",
     "sass": "^1.52.1",
     "svelte": "^3.44.0",
     "svelte-check": "^2.2.7",
