installed missing packages

--- a/svelte/package.json
+++ b/svelte/package.json
@@ -12,6 +12,13 @@
     "format": "prettier --write \"**/*.{js,ts,svelte,scss,html,md,json}\" --ignore-path .gitignore"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
     "@popperjs/core": "^2.11.5",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
     "@tsconfig/svelte": "^2.0.1",
