--- a/react/package.json
+++ b/react/package.json
@@ -5,14 +5,15 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint --ext .js,.ts,.jsx,.tsx ./",
+    "format": "prettier --write \"**/*.{js,ts,jsx,tsx,scss,html,md,json}\" --ignore-path .gitignore"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.1",
     "rawg-api-sdk": "^0.0.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-redux": "^8.0.1",
+    "recoil": "^0.7.3-alpha.2",
     "use-debounce": "^8.0.1"
   },
   "devDependencies": {
