moved vs code files

--- a/svelte/.vscode/extensions.json
+++ b/svelte/.vscode/extensions.json
@@ -1,3 +1,12 @@
 {
-  "recommendations": ["svelte.svelte-vscode"]
+  "recommendations": [
+    "dbaeumer.vscode-eslint",
+    "esbenp.prettier-vscode",
+    "svelte.svelte-vscode"
+  ],
+  "unwantedRecommendations": [
+    "hookyqr.beautify",
+    "dbaeumer.jshint",
+    "ms-vscode.vscode-typescript-tslint-plugin"
+  ]
 }
